# opinionated-rust-template

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cargo-generate.toml  justfile
.github/workflows/: build-template.yaml  ci.yml  template_values.toml
src/: env.rs  lib.rs
template/: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cargo-generate.toml  justfile
template/.github/workflows/: audit.yml  cd.yml  ci.yml
template/src/: config.rs  lib.rs  main.rs
template/tests/: e2e_tests.rs  integration_tests.rs
