[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
rust-version = "1.56.0"
description = ""
documentation = ""
homepage = ""
repository = ""
license = "MIT OR Apache-2.0"
keywords = ["{{project-name}}"]
categories = []

publish = false # no accidents while in dev

[features]
default = []
full = []

[dependencies]
{% if crate_type == "bin" %}serde = { version = "1", features = ["derive"] }
envy = "0.4"
once_cell = "1"{% endif %}

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1"

[package.metadata.playground]
features = ["full"]

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false

[[bench]]
name = "benches"
harness = false
required-features = ["full"]
