[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
rust-version = "1.56.0"
description = ""
# documentation = ""
# homepage = ""
repository = ""{% if license == "mit" %}
license = "MIT"{% endif %}{% if license == "apache" %}
license = "Apache-2.0"{% endif %}{% if license == "both" %}
license = "MIT OR Apache-2.0"{% endif %}{% if license == "none" %}
license = ""{% endif %}
keywords = ["{{project-name}}"]
# categories = []

publish = false # no accidents while in dev

[features]
default = []
full = []

[dependencies]
{% if crate_type == "bin" %}serde = { version = "1", default-features = false, features = ["serde_derive"] }
envy = "0.4"
once_cell = "1"{% endif %}

[dev-dependencies]
criterion = "0.4"
pretty_assertions = "1"

[package.metadata.cargo-udeps.ignore]
development = ["criterion", "pretty_assertions"]

[package.metadata.playground]
features = ["full"]

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false

[[bench]]
name = "benches"
harness = false
required-features = ["full"]
